[package]
name = "gravity"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
getset = "0.1.2"
hyper = { version = "0.14.16", features = ["full"] }
time = { version = "0.3.7", features = ["serde-well-known"] }
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
