[package]
name = "gravity-ingress"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tisonkun/gravity"
description = "Data ingress for the Gravity project."

[dependencies]
gravity-model = { path = "../gravity-model" }
hex = "0.4.3"
hmac = "0.12.0"
hyper = { version = "0.14.16", features = ["full"] }
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
sha2 = "0.10.1"

[dev-dependencies]
anyhow = "1.0.53"
