[package]
name = "gravity-model"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tisonkun/gravity"
description = "Data model for the Gravity project."

[dependencies]
getset = "0.1.2"
time = { version = "0.3.7", features = ["serde-well-known"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"

[dev-dependencies]
anyhow = "1.0.53"
